@@ -1,6 +1,6 @@
 SUBDIRS = src
 dist_doc_DATA = README APL_STATUS_LINE.md COMPLETION.md KEY_BINDINGS.md \
-	APLPLOT.md LICENSE
+	APLPLOT.md EDITOR.md LICENSE
 gapl2fontdir = $(prefix)/share/fonts
 gapl2font_DATA=fonts/*.ttf
 EXTRA_DIST = autogen.sh images fonts
